<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presenter.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/buttonSearch"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search_hint"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/search_button_text"
        android:textSize="16sp"
        app:cornerRadius="4dp"
        android:layout_marginStart="4dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:layout_width="100dp"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/todayButton"
        android:layout_below="@id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/today_button_text"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/tomorrowButton"
        android:layout_below="@id/textInputLayout"
        android:layout_toEndOf="@id/todayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tomorrow_button_text"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/afterdayButton"
        android:layout_below="@id/textInputLayout"
        android:layout_toEndOf="@id/tomorrowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/afterday_button_text"
        android:textSize="14sp"/>

    <View
        android:id="@+id/blackView_2"
        android:layout_below="@id/todayButton"
        android:background="?attr/colorOutline"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_below="@id/blackView_2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="24"
            tools:listitem="@layout/layout_hour"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:clipToPadding="false"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>